# GF-emailbot-prod

./: .dockerignore  .drone.yml  .gitignore  Dockerfile  Makefile  jobspec.nomad  jobspec_acc.nomad  pyproject.toml
.github/: copilot-instructions.md
app/: config.py  main.py
app/agent/: engine.py  filters.py  priority.py  prompts.py  schemas.py
app/api/: routes_agent.py  routes_debug.py  routes_email.py  routes_pages.py
app/auth/: dependencies.py  oauth.py  routes.py  session.py
app/graph/: client.py
app/llm/: client.py
app/logging/: audit.py  config.py
app/templates/: base.html  dashboard.html  email_detail.html
app/templates/components/: draft_panel.html  email_inline.html  email_list.html
config/: tiers.yaml
email_agent.egg-info/: SOURCES.txt  requires.txt
tests/: test_auth.py  test_engine.py  test_filters.py  test_graph_client.py  test_llm_client.py  test_logging.py  test_priority.py  test_prompts.py  test_routes.py
